--- a/pdfFiles/smaartpro/fiche.html
+++ b/pdfFiles/smaartpro/fiche.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
     <title>Exemple de PDF avec Bootstrap</title>
@@ -487,5 +488,104 @@
 
 
    
+</body>
+</html>
+
+
+
+<div class="my-5"></div>
+<!-----------EMPLOI DU TEMPS---------->
+<!DOCTYPE html>
+<html>
+    <title>Exemple de PDF avec Bootstrap</title>
+<link rel="stylesheet"  href="./boot.css">
+<head>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        iframe{
+            width: 100%;
+            height: 760px;
+        }
+
+
+        tr td{
+            padding: 0.5em 0.5em;
+            height: 7em !important;
+        }
+        tr th{
+           padding: 2em;
+           background: rgb(182, 179, 179);
+           color: white;
+           width: 150px;
+        }
+
+
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 d-flex justify-content-start">
+                <div class="">
+                    <img width="100" src="data:image/png;base64,{fiche['group']['groupeLogo']}" class="border" alt="logo">
+                </div>
+                <div class="ml-2 mt-1">
+                    <!--{fiche['group']['groupeName']}-->
+                    <h5 class="text-uppercase mb-0"><strong>Groupe scolaire Renaissance</strong></h5>
+                    <h5 class="mt-0 mb-0"></h5>
+                    
+                    <!--{fiche['site']['name']}-->
+                    <p class="mt-0 mb-0"></p>
+                    <!--{fiche['site']['phoneNumbers']}-->
+                    <p class="mt-0"></p>
+                </div>
+            </div>
+
+            <div class="col-6 d-flex justify-content-start align-items-bottom">
+                <h4>Emploi du temps: 3emeB</h4>
+            </div>
+        </div>
+
+        <table class="table table-bordered">
+            <thead>
+              <tr class="">
+                <th style="width: 130px;" class="bg-light border-light" scope="col"></th>
+                <th scope="col">Lundi</th>
+                <th scope="col">Mardi</th>
+                <th scope="col">Mercredi</th>
+                <th scope="col">Jeudi</th>
+                <th scope="col">Vendredi</th>
+                <th scope="col">Samedi</th>
+                <th scope="col">Dimanche</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">07:30 - 08:30</th>
+                <td>
+                    <td>
+                            Anglais
+                        <br>
+                        <div class="info-sup text-danger text-truncate my-1">
+                            P: Elon Musk
+                        </div>
+              
+                        <div class="info-sup text-primary text-truncate my-0">
+                            S: Salle 3
+                        </div>
+                      </td>
+                </td>
+                <td>Otto</td>
+                <td>@mdo</td>
+                <td>@mdo</td>
+                <td>@mdo</td>
+                <td>@mdo</td>
+              </tr>
+            </tbody>
+          </table>
+    </div>
 </body>
 </html>
