--- a/pdfFiles/smaartpro/fiche.html
+++ b/pdfFiles/smaartpro/fiche.html
@@ -363,6 +363,10 @@
             height: 760px;
         }
 
+        .dateOperation{
+            font-size: 0.7em;
+        }
+
     </style>
 </head>
 <body>
@@ -421,10 +425,9 @@
             <table class="table w-100 table-bordered">
                 <thead>
                     <tr class="bg-light p-0">
-                    <th scope="col">Date operation</th>
+                    <th scope="col">Date </th>
                     <th scope="col">Date valeur</th>
                     <th scope="col">Libellé de l'opération</th>
-                    <th scope="col">Type</th>
                     <th scope="col">Compte</th>
                     <th scope="col">DEBIT</th>
                     <th scope="col">CREDIT</th>
@@ -432,36 +435,26 @@
                 </thead>
                 <tbody>
                     <tr>
-                    <td scope="row">1</td>
-                    <td>Markia</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    </tr>
-                    <tr>
-                    <td scope="row">2</td>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    </tr>
-                    <tr>
-                    <td scope="row">3</td>
-                    <td colspan="">Larry the Bird</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
+                        <td scope="" class="dateOperation" style="width: 170px;">
+                            <div class="row my-0 py-0">
+                                <div class="col-4 my-0 py-0"><span class="text-muted">Operation </span></div>
+                                <div class="col my-0 py-0">: 16/08/24 12:30</div>
+                            </div>
+                            <div class="row my-0 py-0">
+                                <div class="col-4 py-0 my-0 py-0"><span class="text-muted">Valeur </span></div>
+                                <div class="col py-0 my-0 py-0">: 16/08/24 12:30</div>
+                            </div>
+                        </td>
+                        <td>Markia</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                        <td>@mdo</td>
+                        <td>@mdo</td>
                     </tr>
                 </tbody>
                 <tfoot>
                     <tr>
-                        <td colspan="5">Total</td>
+                        <td colspan="4">Total</td>
                         
                         <td class="bg-light"><strong>2 500 599 XAF</strong></td>
                         <td class="bg-light"><strong>1 245 000 XAF</strong></td>
